shortlisting robot done

--- a/RPA CA3 Group 2 Robot/.local/ProjectSettings.json
+++ b/RPA CA3 Group 2 Robot/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Insert Company and TAF into Database.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"Insert Company and TAF into Database.xaml\",\"Shortlist Candidates.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
