email letter of employment and medical check up plus email the candidates that declined the offer

--- a/RPA CA3 Group 2 Robot/.local/ProjectSettings.json
+++ b/RPA CA3 Group 2 Robot/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Insert Company and TAF into Database.xaml\",\"Shortlist Candidates.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"testEmail.xaml\",\"Email Candidates Regarding Job Offer.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
