--- a/RPA CA3 Group 2 Robot/.local/ProjectSettings.json
+++ b/RPA CA3 Group 2 Robot/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"testEmail.xaml\",\"Email Candidates Regarding Job Offer.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"Email Candidates Regarding Job Offer.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
